--- a/The Complete 2022 Web Development Bootcamp/Bootstrap - Tindog/TinDog-Start-master/css/styles.css
+++ b/The Complete 2022 Web Development Bootcamp/Bootstrap - Tindog/TinDog-Start-master/css/styles.css
@@ -1,21 +1,10 @@
 body {
-  font-family: 'Montserrat'
+  font-family: 'Montserrat';
+  text-align: center;
 }
 
-#title {
-  background-color: #ff4c68;
-  color: #fff;
-}
-
-h1 {
+h1, h2, h3, h4, h5, h6 {
   font-family: 'Montserrat', sans-serif;
-  font-weight: 900;
-  font-size: 3.5rem;
-  line-height: 1.5;
-}
-
-h3 {
-  font-family: "Montserrat";
   font-weight: bold;
 }
 
@@ -23,12 +12,33 @@ p {
   color: #8f8f8f;
 }
 
+.big-heading {
+  font-weight: 900;
+  font-size: 3.5rem;
+  line-height: 1.5;
+}
+
+.section-heading {
+  font-size: 3rem;
+  line-height: 1.5;
+}
+
+/* Containers */
 .container-fluid {
-  padding: 3% 15%;
+  padding: 7% 15%;
+}
+
+/* Sections */
+.colored-section {
+  background-color: #ff4c68;
+  color: #fff;
+}
+
+.white-section {
+  background-color: #fff;
 }
 
 /* Navigation Bar */
-
 .navbar {
   padding: 0 0 4.5rem;
 }
@@ -50,26 +60,34 @@ p {
 }
 
 /* Download Buttons */
-
 .download-button {
   margin: 5% 3% 5% 0;
 }
 
-/* Title Image */
-
-.title-image {
-  width: 60%;
-  transform: rotate(25deg);
+/* Title Section */
+#title .container-fluid {
+  padding: 3% 15%;
+  text-align: left;
 }
 
-/* Features Secttion */
+/* Title Image */
+.title-image {
+  width: 22%;
+  transform: rotate(25deg);
+  position: absolute;
+  right: 25%;
+}
 
+/* Features Section */
 #features {
-  padding: 7% 15%;
+  position: relative;
+}
+
+.feature-title {
+  font-size: 1.5 rem;
 }
 
 .feature-box {
-  text-align: center;
   padding: 5%;
 }
 
@@ -80,4 +98,62 @@ p {
 
 .feature-icon:hover {
   color: #ff4c68;
+}
+
+/* Testimonials Section */
+#testimonials {
+  background-color: #ef8172;
+}
+
+.testimonial-text {
+  font-size: 3rem;
+  line-height: 1.5;
+}
+
+.testimonial-image {
+  width: 10%;
+  border-radius: 100%;
+  margin: 20px;
+}
+
+#press {
+  background-color: #ef8172;
+  padding-bottom: 3%;
+}
+
+.press-logo {
+  width: 15%;
+  margin: 20px 20px 50px;
+}
+
+/* Pricing Section */
+#pricing {
+  padding: 100px;
+}
+
+.price-text {
+  font-size: 3rem;
+  line-height: 1.5;
+}
+
+.pricing-coloumn {
+  padding: 3% 2%;
+}
+
+@media (max-width: 992px) {
+  #title {
+    text-align: center;
+  }
+
+  .title-image {
+    position: static;
+    transform: rotate(0);
+    width: 60%;
+  }
+}
+
+/* CTA Section */
+/* Footer section */
+.social-icon {
+  margin: 20px 10px;
 }
